--- a/GAME_PARCIAL/GAME_PARCIAL.vcxproj.filters
+++ b/GAME_PARCIAL/GAME_PARCIAL.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="deborador.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="jugador2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="fantasma.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="jugador2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
